overlays/uk/delete_route.yaml
$patch: delete
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: uk-taco-cloud
  name: taco-cloud
  namespace: taco-cloud
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: uk-taco-cloud
    weight: 100
  wildcardPolicy: None
